NavBar to separate component. Fix auto scroll bug
Using default .scrollIntoView() caused the navbar to then get cut off.
Using the scroll-into-view-if-needed package fixed that.

--- a/webview-ui/src/App.css
+++ b/webview-ui/src/App.css
@@ -1,26 +1,11 @@
 /* Styling for the back and add button at top of page */
-.navigation {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding-bottom: 4px;
-  padding-left: 5%;
-}
-
-.App-header {
-  position: fixed;
+.navbar {
   width: 100%;
-  height: 20px;
   background-color: var(--vscode-sideBar-background);
   padding-bottom: 4px;
   z-index: 1; /* Stay in front of other elements */
-}
-
-.navbar {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  height: 20px;
 }
 
 .back-button {
@@ -48,7 +33,7 @@
   text-align: center;
 }
 
-.chat-view-container {
+.view-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -56,11 +41,7 @@
 
 .message-list {
   font-size: var(--vscode-editor-font-size);
-  /* Vertical offset of the body to render below the navbar.
-     Also ensures that the edges of body content (e.g., the user icon)
-     don't peek out from the edges of the navbar
-  */
-  padding: 24px 1px 5px;
+  padding: 0 1px; /* Ensures that the edges of body content (e.g., the user icon) don't peek out from the edges of the navbar */
   flex: 1; /* Fill the remaining space above the input form */
   overflow-y: auto; /* Scrollable */
 }
@@ -142,13 +123,16 @@
 }
 
 /* Styling for the the chat list page */
+.chat-list {
+  flex: 1;
+  overflow: auto;
+}
+
 .convo {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 10px;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding: 4px 0;
 }
 
 .convo-id {
